<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackgroundVariant">

        <TextView
            android:id="@+id/foodName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="32dp"
            android:textSize="@dimen/text_size_large"
            app:layout_constraintBottom_toTopOf="@+id/textView4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            tools:text="name" />

        <TextView
            android:id="@+id/calories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/proteins"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            tools:text="calories" />

        <TextView
            android:id="@+id/proteins"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/fats"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calories"
            tools:text="proteins" />

        <TextView
            android:id="@+id/fats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/carbs"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/proteins"
            tools:text="fats" />

        <TextView
            android:id="@+id/carbs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fats"
            tools:text="carbs" />

        <Button
            android:id="@+id/close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/kkl"
            app:layout_constraintBottom_toBottomOf="@+id/calories"
            app:layout_constraintStart_toEndOf="@+id/calories"
            app:layout_constraintTop_toTopOf="@+id/calories" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/food_detail_info"
            android:textSize="@dimen/text_size_small"
            app:layout_constraintBottom_toTopOf="@+id/calories"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/foodName" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/gramme"
            app:layout_constraintBottom_toBottomOf="@+id/proteins"
            app:layout_constraintStart_toEndOf="@+id/proteins"
            app:layout_constraintTop_toTopOf="@+id/proteins" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/gramme"
            app:layout_constraintBottom_toBottomOf="@+id/fats"
            app:layout_constraintStart_toEndOf="@+id/fats"
            app:layout_constraintTop_toTopOf="@+id/fats" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/gramme"
            app:layout_constraintBottom_toBottomOf="@+id/carbs"
            app:layout_constraintStart_toEndOf="@+id/carbs"
            app:layout_constraintTop_toTopOf="@+id/carbs" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/food_detail_calories"
            app:layout_constraintBottom_toBottomOf="@+id/calories"
            app:layout_constraintEnd_toStartOf="@+id/calories"
            app:layout_constraintTop_toTopOf="@+id/calories" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/proteins"
            app:layout_constraintBottom_toBottomOf="@+id/proteins"
            app:layout_constraintEnd_toStartOf="@+id/proteins"
            app:layout_constraintTop_toTopOf="@+id/proteins" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/fats"
            app:layout_constraintBottom_toBottomOf="@+id/fats"
            app:layout_constraintEnd_toStartOf="@+id/fats"
            app:layout_constraintTop_toTopOf="@+id/fats" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/carbs"
            app:layout_constraintBottom_toBottomOf="@+id/carbs"
            app:layout_constraintEnd_toStartOf="@+id/carbs"
            app:layout_constraintTop_toTopOf="@+id/carbs" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>